# tflo

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.yml  rust-toolchain.toml
tflo-arrow/: Cargo.toml
tflo-arrow/src/: lib.rs
tflo-arrow/tests/: integration_round_trip.rs
tflo-cel/: Cargo.toml  README.md
tflo-cel/src/: config.rs  context.rs  error.rs  filter.rs  lib.rs  router.rs  rule_engine.rs  rule_loader.rs  traits.rs  wasm.rs
tflo-cep/: Cargo.toml  README.md
tflo-cep-wasm/: Cargo.toml
tflo-cep-wasm/src/: lib.rs
tflo-cep/src/: cel.rs  engine.rs  lib.rs  matched.rs  pattern.rs  runtime.rs  spec.rs
tflo-cep/tests/: cel_predicates.rs  parity_vectors.rs  purity.rs  use_cases.rs
tflo-cep/tests/parity/: vectors.json
tflo-connect-kafka/: Cargo.toml
tflo-connect-kafka/src/: consumer.rs  cursor_store.rs  lib.rs  rdkafka_backend.rs  shard.rs
tflo-connect-kafka/tests/: integration_kafka.rs
tflo-connect-mqtt/: Cargo.toml
tflo-connect-mqtt/src/: lib.rs  rumqttc_backend.rs
tflo-connect-mqtt/tests/: integration_mqtt.rs
tflo-core/: Cargo.toml  OVERVIEW.md  README.md  TODO.md
tflo-core/benches/: benchmarks.rs
tflo-core/examples/: custom_composite.rs
tflo-core/src/: adapter.rs  async.rs  builder.rs  clock.rs  custom_node.rs  dedup.rs  duration.rs  error.rs  event.rs  iter_ext.rs  keyed.rs  lib.rs  metrics.rs  operator.rs  pipeline.rs  projection.rs  reorder.rs  scalar.rs  semantics.rs  shard.rs  signal_builder.rs  state.rs  state_tests.rs  timepoint.rs  timer.rs  wasm.rs
tflo-core/src/combinators/: batch.rs  dedupe.rs  group.rs  join.rs  merge.rs  mod.rs  partition.rs  rate_limit.rs
tflo-core/src/comp/: cross.rs  custom.rs  custom_tests.rs  dual_use.rs  math.rs  mod.rs  plugin.rs  stateful.rs  windowed.rs
tflo-core/src/compile/: absent.rs  extract.rs  inspect.rs  mod.rs  node.rs  pipeline.rs  snapshot.rs  tests.rs  value.rs
tflo-core/src/compile/eval/: ctx.rs  eval.rs  (+3 more)
tflo-core/src/event/: mod.rs  signal.rs
tflo-core/src/pipeline/: mod.rs  types.rs
tflo-core/src/primitives/: calibration.rs  conditioning.rs  correlation.rs  count_window.rs  cross.rs  cumulative.rs  detectors.rs  event_mode.rs  glitch_pulse.rs  higher_moments.rs  lag_buffer.rs  linear_calib.rs  median_window.rs  prev.rs  prev_by.rs  results.rs  rsi.rs  runt_window.rs  time_ema.rs  time_window.rs  welford.rs  wma.rs
tflo-core/src/validation/: helpers.rs  mod.rs
tflo-core/src/window/: mod.rs  spec.rs
tflo-core/tests/: api_coverage_tests.rs  combinators_tests.rs  custom_algorithms.rs  detectors_tests.rs  integration_tests.rs  keyed_buffer_tests.proptest-regressions  keyed_buffer_tests.rs  primitives_tests.rs  snapshot_tests.rs  timer_tests.rs  validated_tests.rs
tflo-examples/: Cargo.toml
tflo-examples/examples/bollinger-bands/: main.rs
tflo-examples/examples/composing-graphs/: main.rs
tflo-examples/examples/computation-graph-architecture/: main.rs
tflo-examples/examples/custom-composite/: main.rs
tflo-examples/examples/custom-nodes/: main.rs
tflo-examples/examples/docs-advanced/: main.rs
tflo-examples/examples/docs-file-checkpoint/: main.rs
tflo-examples/examples/docs-indicators/: main.rs
tflo-examples/examples/docs-quick-start/: main.rs
tflo-examples/examples/docs-s3-checkpoint/: main.rs
tflo-examples/examples/docs-scripting/: main.rs
tflo-examples/examples/docs-signals/: main.rs
tflo-examples/examples/ema-the-forgetful-indicator/: main.rs
tflo-examples/examples/five-signal-detectors/: main.rs
tflo-examples/examples/golden-tests/: main.rs
tflo-examples/examples/iot-portal/: main.rs
tflo-examples/examples/rsi-from-windows/: main.rs
tflo-examples/examples/sma-from-scratch/: main.rs
tflo-examples/examples/state-checkpointing-recovery/: main.rs
tflo-examples/examples/taming-nan/: main.rs
tflo-examples/examples/three-execution-modes/: main.rs
tflo-examples/examples/three-extension-mechanisms/: main.rs
tflo-examples/examples/time-vs-count-windows/: main.rs
tflo-examples/examples/warmup-and-nan/: main.rs
tflo-examples/examples/welford-streaming-variance/: main.rs
tflo-examples/examples/what-is-a-signal/: main.rs
tflo-examples/src/: lib.rs
tflo-fintech/: Cargo.toml  README.md
tflo-fintech/src/: aliases.rs  composites.rs  lib.rs
tflo-fintech/src/composites/: helpers.rs  mod.rs
tflo-fintech/src/nodes/: mod.rs  talib_math.rs
tflo-fintech/tests/: golden.rs  indicator_contract_tests.rs
tflo-fintech/tests/golden/: INSTALL_TA_LIB.md  README.md  runner.rs  tests.rs  validator.rs  vector.rs
tflo-ops/: Cargo.toml  README.md
tflo-ops/src/: checkpoint.rs  events.rs  lib.rs  prelude.rs
tflo-ops/src/ops/: composites.rs  detectors.rs  math.rs  mod.rs  session_tumbling.rs  stats.rs  trackers.rs  windows.rs
tflo-ops/src/primitives/: calibration.rs  conditioning.rs  correlation.rs  count_window.rs  cross.rs  cumulative.rs  detectors.rs  glitch_pulse.rs  higher_moments.rs  lag_buffer.rs  linear_calib.rs  median_window.rs  mod.rs  prev.rs  prev_by.rs  results.rs  rsi.rs  runt_window.rs  time_ema.rs  time_window.rs  welford.rs  wma.rs
tflo-ops/src/shapes/: bivariate.rs  mod.rs  tracker.rs  windowed.rs
tflo-ops/tests/: composites_tests.rs  detectors_tests.rs  math_tests.rs  trackers_tests.rs  windows_tests.rs
tflo-rego/: Cargo.toml  README.md
tflo-rego/src/: config.rs  context.rs  error.rs  filter.rs  lib.rs  policy.rs  policy_loader.rs  traits.rs  value_codec.rs
tflo-rhai/: Cargo.toml  README.md
tflo-rhai/src/: context.rs  error.rs  filter.rs  lib.rs  options.rs  script.rs  script_exec.rs  traits.rs  transform.rs
tflo-sink-influx/: Cargo.toml
tflo-sink-influx/src/: lib.rs
tflo-sink-influx/tests/: integration_influx.rs
tflo-state-files/: Cargo.toml
tflo-state-files/src/: lib.rs
tflo-state-s3/: Cargo.toml
tflo-state-s3/src/: lib.rs
tflo-state-s3/tests/: integration_s3.rs
tflo-wasm/: Cargo.toml  README.md  package.json
tflo-wasm/src/: detectors.rs  lib.rs
tflo-wasm/tests/: bridge.rs
(+206 files in other folders)
