[workspace]
resolver = "2"
members = [
    "tflo-core",
    "tflo-ops",
    "tflo-fintech",
    "tflo-cel",
    "tflo-rego",
    "tflo-rhai",
    "tflo-state-files",
    "tflo-state-s3",
    "tflo-connect-kafka",
    "tflo-connect-mqtt",
    "tflo-sink-influx",
    "tflo-arrow",
    "tflo-examples",
    "tflo-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Matt Cochran"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matt-cochran/tflo"

[workspace.dependencies]
# Internal crates
tflo-core = { path = "tflo-core" }
tflo-ops = { path = "tflo-ops" }
tflo-fintech = { path = "tflo-fintech" }
tflo-cel = { path = "tflo-cel" }
tflo-rhai = { path = "tflo-rhai" }
tflo-rego = { path = "tflo-rego" }
tflo-state-files = { path = "tflo-state-files" }
tflo-state-s3 = { path = "tflo-state-s3" }
tflo-connect-kafka = { path = "tflo-connect-kafka" }
tflo-connect-mqtt = { path = "tflo-connect-mqtt" }
tflo-sink-influx = { path = "tflo-sink-influx" }
tflo-arrow = { path = "tflo-arrow" }

# Async runtime
tokio = { version = "1.41", default-features = false }
tokio-stream = { version = "0.1" }
futures = { version = "0.3" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.9"
postcard = { version = "1", features = ["use-std"] }

# Utilities (used by >=2 crates)
pin-project = "1.1"
hex = "0.4"
thiserror = "1.0"

# Dev-only (used by >=2 crates as dev-dependency)
proptest = "1.4"
criterion = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# `pedantic` and `nursery` are **re-enabled** at warn level. The handful
# of intentional violations (numeric casts in the streaming engine,
# float compares in detector contracts, `mul_add` rewriting that would
# break the `tflo-fintech` golden-fixture bit-equality test) are pushed
# down to per-crate `#![allow]` directives with rationale comments. See
# `docs/lint-backlog.md` for the per-batch history.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# `type_complexity` fires pervasively on the engine's boxed-closure node
# types (`Arc<dyn Fn(...)>`). Factoring each into a type alias is
# tracked as future work in `docs/lint-backlog.md`.
type_complexity = "allow"

# ── Lint backlog batch 1 (denied) ──────────────────────────────────────
# Specific-lint `deny` entries take priority over the group `warn` above.
uninlined_format_args = "deny"
redundant_closure_for_method_calls = "deny"
explicit_iter_loop = "deny"

# ── Lint backlog batch 2 (denied) ──────────────────────────────────────
doc_markdown = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"

# ── Lint backlog batch 3 (denied) ──────────────────────────────────────
use_self = "deny"
missing_const_for_fn = "deny"

# ── Lint backlog batches 4–5 (intent-allows, scoped per crate) ─────────
# Workspace-wide `allow` reserved for cases that are *universally*
# acceptable across every crate. Crate-specific intentional violations
# (numeric casts in tflo-core / tflo-ops / tflo-fintech, exact-float
# compare in detectors, mul_add bit-equality in tflo-fintech) live in
# each crate's `lib.rs` as `#![allow(...)]` with rationale. This is the
# Phase 5 "annotate, don't rewrite" decision applied at the correct
# scope.
#
# These are stylistic preferences with no correctness impact — universal
# allow keeps the diff readable.
similar_names = "allow"             # short, related variable names are common in math code
items_after_statements = "allow"    # test fixtures often inline helpers after setup
option_if_let_else = "allow"        # style; both forms read fine
map_unwrap_or = "allow"             # style; .map().unwrap_or() is often clearer
too_many_lines = "allow"            # we have a handful of legitimately-long match arms
if_not_else = "allow"               # style preference
wildcard_imports = "allow"          # widespread in tests and preludes
single_match_else = "allow"         # style; one-arm match keeps intent visible
return_self_not_must_use = "allow"  # builders that don't always chain
struct_excessive_bools = "allow"    # one-off in tflo-rego config
significant_drop_tightening = "allow"  # nursery; false positives common
redundant_pub_crate = "allow"       # nursery; cosmetic
unnecessary_literal_bound = "allow" # nursery; not always a clear win

# Numeric streaming-engine intent — promoted to workspace so test
# binaries (which are separate compilation units that ignore crate-
# level `#![allow]`) inherit the same intent. Universal allow is
# justified because the whole workspace is a numeric engine: even the
# scripting / connector crates handle timestamps and counts.
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
float_cmp = "allow"
suboptimal_flops = "allow"

# Style/cleanup lints — kept `allow` so the workspace passes
# `-D warnings`. They are tracked as case-by-case cleanup opportunities
# in `docs/lint-backlog.md`; future PRs can land mechanical fixes.
needless_collect = "allow"             # mostly intentional in tests
match_same_arms = "allow"              # arms often kept apart for clarity
trivially_copy_pass_by_ref = "allow"   # API-shape, evaluate per-impl
redundant_clone = "allow"              # clone() is often defensively kept
missing_fields_in_debug = "allow"      # graph types Debug-skip closures
must_use_candidate = "allow"           # would add #[must_use] everywhere
needless_raw_string_hashes = "allow"   # cosmetic
manual_let_else = "allow"              # style preference
implicit_hasher = "allow"              # rare; case-by-case
unused_self = "allow"                  # trait-shape reasons
unnested_or_patterns = "allow"
unnecessary_wraps = "allow"
tuple_array_conversions = "allow"
suspicious_operation_groupings = "allow"
semicolon_if_nothing_returned = "allow"
too_long_first_doc_paragraph = "allow"
derive_partial_eq_without_eq = "allow"
match_on_vec_items = "allow"           # vec[i] inside match — intentional in some primitives
many_single_char_names = "allow"       # math code uses single-char vars
needless_pass_by_value = "allow"
ignored_unit_patterns = "allow"
debug_assert_with_mut_call = "allow"

# ── Panic-freedom (hardening pass) ─────────────────────────────────────
# Production code must not panic. These `restriction` lints are denied
# workspace-wide; test code is exempted with a per-crate
# `#![cfg_attr(test, allow(...))]`.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"

# ── Build Profiles ─────────────────────────────────────────────────────
#
# Philosophy:
#   dev:    Fast iteration. Full debug info for workspace crates,
#           minimal debug info for dependencies.
#   release: Conservative optimizations. Thin LTO for runtime perf
#            without excessive compile times. Line tables for backtraces.
#   ci:     Like dev but disables incremental (sccache caches better).
#           Use in CI: cargo build --profile ci

[profile.dev]
opt-level = 0
debug = 1                       # line tables for dependencies (baseline)
incremental = true
codegen-units = 256             # max parallelism, fastest recompilation
lto = false
overflow-checks = true

# Dependencies: minimal debug info (line tables only)
[profile.dev.package."*"]
debug = "line-tables-only"

# Local workspace crates: full debug symbols for LLDB/GDB usability
[profile.dev.package.tflo-core]
debug = 2

[profile.dev.package.tflo-ops]
debug = 2

[profile.dev.package.tflo-fintech]
debug = 2

[profile.dev.package.tflo-cel]
debug = 2

[profile.dev.package.tflo-rego]
debug = 2

[profile.dev.package.tflo-rhai]
debug = 2

[profile.dev.package.tflo-state-files]
debug = 2

[profile.dev.package.tflo-state-s3]
debug = 2

[profile.dev.package.tflo-connect-kafka]
debug = 2

[profile.release]
opt-level = 3
debug = "line-tables-only"      # backtraces without full debuginfo bloat
incremental = false
codegen-units = 16              # moderate parallelism for decent optimization
lto = "thin"                    # cross-crate inlining, acceptable compile time
overflow-checks = true          # arithmetic overflow must trap, not silently wrap
strip = "none"                  # keep symbols for profiling; use "symbols" in CI

[profile.ci]
inherits = "dev"
incremental = false             # sccache caches better without incremental artifacts
codegen-units = 256
