[package]
name = "tflo-cel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CEL (Common Expression Language) rule engine integration for tflo"
license.workspace = true
repository.workspace = true
keywords = ["cel", "rules", "streaming", "temporal", "policy"]
categories = ["config", "parsing"]

[dependencies]
tflo-core = { workspace = true }
# default-features off: tflo-cel uses only scalar comparison/arithmetic/boolean
# predicates (see src/context.rs scalar-only convention), never timestamp()/
# duration()/matches(), so chrono + regex are dead weight (~1.8 MB in wasm).
cel-interpreter = { version = "0.10", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
