[package]
name = "tflo-connect-kafka"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Kafka consumer adapter for tflo keyed execution (Phase 2 contracts + optional rdkafka backend)"
license.workspace = true
repository.workspace = true
keywords = ["kafka", "streaming", "adapter", "shard-router"]
categories = ["data-structures", "asynchronous"]

[features]
default = []
# Phase 2 contracts (KafkaConsumer / KafkaProducer traits + KafkaShardRouter).
# Always-on once you depend on this crate; the feature only gates the async
# helpers that need tokio.
async = ["tflo-core/async", "dep:tokio", "dep:futures"]
# Optional concrete backend using `rdkafka` (librdkafka). Disabled by default
# to keep the crate buildable on hosts without librdkafka system deps.
rdkafka-backend = ["async", "dep:rdkafka"]
# Adapter-level integration tests against a real Kafka broker (testcontainers).
# Requires Docker on the host. Implies `rdkafka-backend`.
integration-tests = ["rdkafka-backend"]

[dependencies]
tflo-core = { workspace = true }
tflo-state-files = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true, optional = true, features = ["rt", "sync", "macros"] }
futures = { workspace = true, optional = true }
rdkafka = { version = "0.36", optional = true, default-features = false, features = ["tokio", "cmake-build"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
testcontainers = "0.23"
# Pin at `0.11.6` (matches the workspace lockfile). The MSRV-aware
# resolver would otherwise pick the lowest `^0.11.*` it can prove
# compatible with the workspace `rust-version`, which has historically
# selected 0.11.0 and broken cross-crate feature unification (e.g. with
# `tflo-state-s3`'s `localstack` feature).
testcontainers-modules = { version = "0.11.6", features = ["kafka"] }

[lints]
workspace = true
