[package]
name = "tflo-connect-mqtt"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "MQTT adapter for tflo — edge-friendly Source/Sink + bounded QoS-2 dedup cursor"
license.workspace = true
repository.workspace = true
keywords = ["mqtt", "iot", "streaming", "edge"]
categories = ["data-structures", "asynchronous"]

[features]
default = []
# Contracts only (MqttConsumer / MqttProducer / MqttCursor) — gated so the
# crate stays embedded-friendly when feature is off.
async = ["tflo-core/async", "dep:tokio", "dep:futures"]
# Concrete backend using `rumqttc` (pure-Rust MQTT v3/v5). Cross-compiles
# cleanly to ARM/WASM without C deps — required for edge gateway story.
rumqttc-backend = ["async", "dep:rumqttc"]

[dependencies]
tflo-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true, optional = true, features = ["rt", "sync", "macros"] }
futures = { workspace = true, optional = true }
rumqttc = { version = "0.24", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
